--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:site" content="@goee" />
     <meta name="twitter:creator" content="@persistventures.com" />
     <meta property="og:title" content="Goddess of Everything Else vs. the Goddess of Cancer: Uncover the Cosmic Tug-of-War!" />
-    <meta property="og:image" content="https://github.com/lalitchoudhry/goee-meme/blob/master/public/assets/images/logo.png" />
+    <meta property="og:image" content="https://github.com/lalitchoudhry/goee-meme/blob/master/public/assets/images/logo.png?raw=true" />
     
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
