--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Goddess of Everything</title>
+    <title>GOEE: Goddess of Everything</title>
 
     <link
       rel="shortcut icon"
@@ -51,14 +51,14 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="This website explores the captivating video concept of the Goddess of Everything Else vs. the Goddess of Cancer. Dive into the battle between order and chaos, randomness and structure, and discover how these opposing forces shape our universe. Explore how life evolved, from single-celled beginnings to the vastness of space, influenced by these contrasting goddesses."
+      content="You’ve now been infected by the love and grace of the goddess of everything else. Her spirit soars so you may fly, share this meme with every close person you know and give them a spark of hope in the future."
     />
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Anton&family=Bangers&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Fredoka:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Bangers&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Dancing+Script:wght@400..700&family=Fredoka:wght@300..700&family=IM+Fell+DW+Pica+SC&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
 
