--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     />
     <meta
       property="og:image"
-      content="https://github.com/lalitchoudhry/goee-meme/blob/master/public/assets/images/logo.png?raw=true"
+      content="https://goee.meme/assets/images/logo.png"
     />
+    <meta property="og:url" content="https://goee.meme/" />
 
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
